feat: include route read user logged
