# src/swagger.json
@@ -230,6 +230,28 @@
       }
     },
 
+    "/users/logged": {
+      "get": {
+        "summary": "Leitura do usuário logado",
+        "description": "Rota responsável por retornar os dados do usuário logado",
+        "tags": ["Users"],
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
     "/users/{id}": {
       "get": {
         "summary": "Listagem de um usuário por ID",
